--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,29 @@ p{
     background-image: url(../images/whatsapp.jpg);
 }
 
+@media screen and (max-width: 915px){
+    .boton{
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        width: 100%;
+        height: 70px;
+        color: white;
+        top: 2px;
+        font-size: 20px;
+        font-weight: 500;
+        border: none;
+        cursor: pointer;
+        text-transform: uppercase;
+        transition: .3s ease all;
+        border-radius: 10px;
+        position: relative;
+        overflow: hidden;
+        background-image: url(../images/whatsapp.jpg);
+    }
+}
+
 .boton.uno:hover::after{
     top: 0;
 }
@@ -189,6 +212,12 @@ p{
     animation-duration: 1s;
 }
 
+@media screen and (max-width: 915px){
+    .redes-soc{
+        display: flex;
+    }
+}
+
 .color-nombre-menu:hover{
     color: darkblue;
     animation: bounceIn;
@@ -202,4 +231,54 @@ p{
 
 .sobrenosotrosp{
     background-color: aliceblue;
+}
+
+.navegacionpuntero{
+    display: flex;
+}
+.navegacionpuntero{
+    position: fixed;
+    bottom: 20px;
+    left: 800px;
+}
+.tamañozap{
+    text-align: center;
+    width: 90px;
+    padding: 5px;
+    margin: 10px;
+    border: solid 2px;
+    border-radius: 20px;
+    background-color: white;
+}
+
+.nonehjk{
+    text-align: center;
+    text-decoration: none;
+    color: black;
+}
+
+@media screen and (max-width: 915px){
+    .navegacionpuntero{
+        display: flex;
+    }
+    .navegacionpuntero{
+        position: fixed;
+        bottom: 20px;
+        left: 5px;
+    }
+    .tamañozap{
+        text-align: center;
+        width: 60px;
+        padding: 0px;
+        margin: 5px;
+        border: solid 0px;
+        border-radius: 20px;
+        background-color: white;
+    }
+    
+    .nonehjk{
+        text-align: center;
+        text-decoration: none;
+        color: black;
+    }
 }
